--- a/cosito/src/main/webapp/css/plantilla.css
+++ b/cosito/src/main/webapp/css/plantilla.css
@@ -1,112 +1,141 @@
-body{
-    background-color: #5B175D; <!--#6A2589 #dcd36a;-->
-    text-align: center;
+body {
+	background-color: #175D58 !important; <!-- #6 A2589 #dcd36a; -->
+	text-align: center;
 }
-header{
-    width: 100%;
-    height: 185px;
-    position: fixed;
-    background-color: white;
-    margin-top: -14%;
-    z-index: 1;
-    margin-left: -7px;
-    box-shadow: -1px 4px 5px black;
-    border-radius: 10px;
+
+header {
+	width: 100%;
+	height: 185px;
+	position: fixed;
+	background-color: white;
+	margin-top: -14%;
+	z-index: 1;
+	margin-left: 1px;
+	box-shadow: -1px 4px 5px black;
+	border-radius: 10px;
 }
-header div{
-    display: inline-block;
-    float: right;
-    margin-right: 5%;
+
+header div {
+	display: inline-block;
+	float: right;
+	margin-right: 5%;
 }
-header div img{
-    width: 38px;
-    border-radius: 3px;
-    margin-top: 32px;
-    cursor: pointer;
-}
-.imagenesMenu img{
-    width: 50px;
-}
-section{
-    width: 100%;
-    margin-left: 14px;
-    margin-top: 209px;
-}
-.item{
-    background-image: url("../images/banner-web.jpg") !important;
-    width: 978px;
-    height: 250px;
-    margin-left: 240px;
-    position: relative;
-    margin-bottom: 10px;
-    border-radius: 6px;
-    box-shadow: -1px 4px 5px black;
-    border-left: black;
-}
-.item:hover{
-    width: 998px;
-    height: 270px;
-    margin-left: 230px;
-}
-.item img{
-    margin-left: 95%;
-    margin-top: 5px;
-    cursor: pointer;
-}
-.principal img{
-    width: 40%;
-}
-.principal h2{
-    font-family: 'Luckiest Guy', cursive;
-    color: #0B4C5F;
-}
-.menu{
-    float: left;
-    margin-left: 10px;
-}
-.menu img{
-    margin-right: 10px;
-    cursor: pointer;
-    
-}
-.scrolling{
-    width: 100%;
-    height: 40px;
-    position: fixed;
-    margin-left: -20px;
-    margin-top: 543px;
-    z-index: 2;
-    cursor: pointer;
-}
-.scrollingUp{
-    width: 100%;
-    height: 40px;
-    position: fixed;
-    margin-left: -20px;
-    margin-top: -30px;
-    z-index: 2;
-    cursor: pointer;
-}
-.logo img{
-    width: 386px;
-    margin-right: 47%;
-    margin-top: 2%;
-}
-.redesSociales{
-    margin-right: 63px;
-    margin-top: 43px;
-}
-.redesSociales a{
-    cursor: pointer;
-}
-.agregarSeccion{
-    cursor: pointer;
-    position:fixed;
-}
-.eliminarSeccion{
-    margin-left: 80px;
-    margin-top: 20px;
-}
-.eliminarSeccion img{
+
+header div img {
+	width: 38px;
+	border-radius: 3px;
+	margin-top: 32px;
 	cursor: pointer;
+}
+
+.imagenesMenu img {
+	width: 50px;
+}
+
+section {
+	width: 100%;
+	margin-left: 14px;
+	margin-top: 209px;
+}
+
+.item {
+	background-image: url("../images/banner-web.jpg") !important;
+	width: 978px;
+	height: 250px;
+	margin-left: 240px;
+	position: relative;
+	margin-bottom: 10px;
+	border-radius: 6px;
+	box-shadow: -1px 4px 5px black;
+	border-left: black;
+}
+
+.item:hover {
+	width: 998px;
+	height: 270px;
+	margin-left: 230px;
+}
+
+.item img {
+	margin-left: 95%;
+	margin-top: 5px;
+	cursor: pointer;
+}
+
+.principal img {
+	width: 40%;
+}
+
+.principal h2 {
+	font-family: 'Luckiest Guy', cursive;
+	color: #0B4C5F;
+}
+
+.menu {
+	float: left;
+	margin-left: 10px;
+}
+
+.menu img {
+	margin-right: 10px;
+	cursor: pointer;
+}
+
+.scrolling {
+	width: 100%;
+	height: 40px;
+	position: fixed;
+	margin-left: -20px;
+	margin-top: 543px;
+	z-index: 2;
+	cursor: pointer;
+}
+
+.scrollingUp {
+	width: 100%;
+	height: 40px;
+	position: fixed;
+	margin-left: -20px;
+	margin-top: -30px;
+	z-index: 2;
+	cursor: pointer;
+}
+
+.logo img {
+	width: 386px;
+	margin-right: 47%;
+	margin-top: 2%;
+}
+
+.redesSociales {
+	margin-right: 63px;
+	margin-top: 43px;
+}
+
+.redesSociales a {
+	cursor: pointer;
+}
+
+.agregarSeccion {
+	cursor: pointer;
+	position: fixed;
+}
+
+.eliminarSeccion {
+	float: right;
+	margin-top: -247px;
+	position: relative;
+	margin-right: -24px;
+}
+
+.eliminarSeccion img {
+	cursor: pointer;
+}
+.back img{
+	position:fixed;
+	width:205px;
+	height: 85px;
+	margin-left:50px;
+	margin-top:-20px;
+	z-index:2;
 }
