--- a/cosito/src/main/webapp/css/publicaciones.css
+++ b/cosito/src/main/webapp/css/publicaciones.css
@@ -2,15 +2,16 @@
 	width: 100%;
 	position: absolute;
 	margin-top: 1%;
-	margin-left: 39px;
 	border-radius: 10px;
+	text-align:center;
 }
 
 .publicaciones div {
+	text-align:center;
 	width: 45%;
 	height: 180px;
 	background-color: #FFF;
-	margin-top: 2%;
+	margin-top: 1.5%;
 	box-shadow: -1px 4px 5px #000;
 	border-radius: 10px;
 	display: inline-block;
