--- a/cosito/src/main/webapp/css/plantilla.css
+++ b/cosito/src/main/webapp/css/plantilla.css
@@ -5,29 +5,33 @@ body {
 
 header {
 	width: 100%;
-	height: 185px;
+	height: 320px;
 	position: fixed;
-	background-color: white;
-	margin-top: -14%;
 	z-index: 1;
 	margin-left: 1px;
-	box-shadow: -1px 4px 5px black;
+	box-shadow: -1px 4px 5px #000;
 	border-radius: 10px;
+	margin-top: -25.5%;	
+	background-image: url("../images/logo/fondoHeader.jpg");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 1520px 320px;
 }
 
 header div {
 	display: inline-block;
 	float: right;
-	margin-right: 5%;
+	margin-right: 18.5%;
 }
 
 header div img {
 	width: 38px;
 	border-radius: 3px;
-	margin-top: 32px;
+	margin-top: 12px;
 	cursor: pointer;
 }
 
+}
 .imagenesMenu img {
 	width: 50px;
 }
@@ -35,11 +39,10 @@ header div img {
 section {
 	width: 100%;
 	margin-left: 14px;
-	margin-top: 209px;
+	margin-top: 379px;
 }
 
 .item {
-	background-image: url("../images/banner-web.jpg") !important;
 	width: 978px;
 	height: 250px;
 	margin-left: 240px;
@@ -85,8 +88,8 @@ section {
 	width: 100%;
 	height: 40px;
 	position: fixed;
-	margin-left: -20px;
-	margin-top: 543px;
+	margin-left: -13px;
+	margin-top: 373px;
 	z-index: 2;
 	cursor: pointer;
 }
@@ -96,20 +99,23 @@ section {
 	height: 40px;
 	position: fixed;
 	margin-left: -20px;
-	margin-top: -30px;
+	margin-top: -53px;
 	z-index: 2;
 	cursor: pointer;
 }
 
+}
 .logo img {
-	width: 386px;
-	margin-right: 47%;
+	width: 307px;
+	margin-right: 51.5%;
 	margin-top: 2%;
 }
 
 .redesSociales {
-	margin-right: 63px;
-	margin-top: 43px;
+	margin-top: 287px;
+	position: absolute;
+	margin-left: 706px;
+	height: 33px;
 }
 
 .redesSociales a {
@@ -131,11 +137,12 @@ section {
 .eliminarSeccion img {
 	cursor: pointer;
 }
-.back img{
-	position:fixed;
-	width:205px;
+
+.back img {
+	position: fixed;
+	width: 205px;
 	height: 85px;
-	margin-left:50px;
-	margin-top:-20px;
-	z-index:2;
+	margin-left: 50px;
+	margin-top: -20px;
+	z-index: 2;
 }
