--- a/cosito/src/main/webapp/css/publicaciones.css
+++ b/cosito/src/main/webapp/css/publicaciones.css
@@ -3,20 +3,44 @@
 	position: absolute;
 	margin-top: 1%;
 	border-radius: 10px;
-	text-align:center;
+	text-align: center;
+}
+
+.publicaciones h1 {
+	height: 28px;
+	font-size: 50px;
+	color: white;
+	font-family: 'Dancing Script', cursive;
+	text-align: center;
 }
 
 .publicaciones div {
-	text-align:center;
-	width: 45%;
+	text-align: center;
+	width: 42%;
 	height: 180px;
 	background-color: #FFF;
 	margin-top: 1.5%;
 	box-shadow: -1px 4px 5px #000;
 	border-radius: 10px;
 	display: inline-block;
+	margin-left: 15px;
+	margin-right: 21px;
 }
-header{
+
+header {
 	margin-left: -7px;
 	background-size: 1532px 320px;
+}
+
+.subPublicaciones {
+	background-image: url('../images/contenidos/fondoContenidos.jpg');
+}
+
+.back img {
+	position: fixed;
+	width: 205px;
+	height: 85px;
+	margin-left: 50px;
+	margin-top: -56px;
+	z-index: 2;
 }
